WIP #273 #284 updated styling on trial page, fixed number precision display errors with sliders on IOS, and updated slider styling to make it a little easier to use in carousels

--- a/maxmobility/apps/eval-mobile/app/modules/trial/trial.component.scss
+++ b/maxmobility/apps/eval-mobile/app/modules/trial/trial.component.scss
@@ -41,14 +41,16 @@
 		margin: 10, 10;
 	}
 
+	GridLayout {
+		Slider {
+			background-color: $permobil-orange;
+			margin: 5, 25, 10, 25;
+		}
+	}
+
 	DockLayout {
 		color: #fff;
 		margin: 10, 10;
-
-		Slider {
-			background-color: $permobil-orange;
-			padding: 0, 25, 0, 25;
-		}
 
 		Switch {
 			margin: 0;
